--- a/Main/1CProjects/DataProcessorsExternal/UploadToFiles/ГрупповоеИзменение/Forms/ФормаСсылкиТЧ.xml
+++ b/Main/1CProjects/DataProcessorsExternal/UploadToFiles/ГрупповоеИзменение/Forms/ФормаСсылкиТЧ.xml
@@ -1,33 +1,22 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <MetaDataObject xmlns="http://v8.1c.ru/8.3/MDClasses" xmlns:app="http://v8.1c.ru/8.2/managed-application/core" xmlns:cfg="http://v8.1c.ru/8.1/data/enterprise/current-config" xmlns:cmi="http://v8.1c.ru/8.2/managed-application/cmi" xmlns:ent="http://v8.1c.ru/8.1/data/enterprise" xmlns:lf="http://v8.1c.ru/8.2/managed-application/logform" xmlns:style="http://v8.1c.ru/8.1/data/ui/style" xmlns:sys="http://v8.1c.ru/8.1/data/ui/fonts/system" xmlns:v8="http://v8.1c.ru/8.1/data/core" xmlns:v8ui="http://v8.1c.ru/8.1/data/ui" xmlns:web="http://v8.1c.ru/8.1/data/ui/colors/web" xmlns:win="http://v8.1c.ru/8.1/data/ui/colors/windows" xmlns:xen="http://v8.1c.ru/8.3/xcf/enums" xmlns:xpr="http://v8.1c.ru/8.3/xcf/predef" xmlns:xr="http://v8.1c.ru/8.3/xcf/readable" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.1">
-	<ExternalDataProcessor uuid="79233961-0e7d-4848-8618-39e5fb81f848">
-		<InternalInfo>
-			<xr:ContainedObject>
-				<xr:ClassId>c3831ec8-d8d5-4f93-8a22-f9bfae07327f</xr:ClassId>
-				<xr:ObjectId>4672371c-cade-46e4-be72-9c931b2f9004</xr:ObjectId>
-			</xr:ContainedObject>
-			<xr:GeneratedType name="ExternalDataProcessorObject.ГрупповоеИзменение" category="Object">
-				<xr:TypeId>3a3d78dc-30ef-477c-a207-38373b9f9993</xr:TypeId>
-				<xr:ValueId>8156bc78-fb18-4654-baff-25eddd6aef55</xr:ValueId>
-			</xr:GeneratedType>
-		</InternalInfo>
+	<Form uuid="1ad7806a-82d0-4e68-a6fb-bc8a67e1975e">
 		<Properties>
-			<Name>ГрупповоеИзменение</Name>
+			<Name>ФормаСсылкиТЧ</Name>
 			<Synonym>
 				<v8:item>
 					<v8:lang>ru</v8:lang>
-					<v8:content>ГрупповоеИзменение</v8:content>
+					<v8:content>Форма ссылок ТЧ</v8:content>
 				</v8:item>
 			</Synonym>
 			<Comment/>
-			<DefaultForm>ExternalDataProcessor.ГрупповоеИзменение.Form.Форма</DefaultForm>
-			<AuxiliaryForm/>
+			<FormType>Ordinary</FormType>
+			<IncludeHelpInContents>false</IncludeHelpInContents>
+			<UsePurposes>
+				<v8:Value xsi:type="app:ApplicationUsePurpose">PersonalComputer</v8:Value>
+				<v8:Value xsi:type="app:ApplicationUsePurpose">MobileDevice</v8:Value>
+			</UsePurposes>
+			<ExtendedPresentation/>
 		</Properties>
-		<ChildObjects>
-			<Form>Форма</Form>
-			<Form>ФормаЗапросаДанных</Form>
-			<Form>ФормаКода</Form>
-			<Form>ФормаСсылкиТЧ</Form>
-		</ChildObjects>
-	</ExternalDataProcessor>
+	</Form>
 </MetaDataObject>
